--- a/style.css
+++ b/style.css
@@ -58,6 +58,20 @@
     border-radius: 2px;
   }
 
+  .navbar ul li b {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 13px;
+    transition: .5s;
+  }
+
+  .navbar ul li b.active,
+  .navbar ul li b:hover{
+    background-color: orange;
+    border-radius: 2px;
+  }
+
   .container .center{
     position: absolute;
     top: 45%;
