--- a/style.css
+++ b/style.css
@@ -51,7 +51,13 @@
       padding: 6px 13px;
       transition: .5s;
   }
-
+  .navbar ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 13px;
+    transition: .5s;
+}
   .navbar ul li a.active,
   .navbar ul li a:hover{
     background-color: orange;
