--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   }
 
   .container {
-      background: 	#ffebcd	255,235,205;
+      background: #000000;
       height: 100vh;
       background-size: 1% 1000%;
   }
