--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   }
 
   .container {
-      background: #000000;
+      background: url(siyag.jpg);
       height: 100vh;
       background-size: 1% 1000%;
   }
