--- a/style.css
+++ b/style.css
@@ -1,95 +1,84 @@
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+}
+.container {
+  background: url(dfa.jpg);
+   height: 100vh;
+   background-size: 101% 100%;
+   background-repeat: repeat;
+}
 
-  * {
-      margin: 0;
-      padding: 0;
-  }
 
-  .container {
-     background: url(siyag.jpg);
-      height: 100vh;
-      background-size: 1% 1000%;
-      background-repeat: repeat;
-  }
+.container .navbar{
+  width: 100%;
+  height: 80px;
+  background: rgb(240, 176, 0);
+}
 
-  .container .navbar{
-      width: 100%;
-      height: 100xp;
-      background: rgba(50, 53, 50, 0.5);
-  }
+.navbar .ucretsizhesap{
+  display: inline-block;
+  margin-left: 50px;
+  margin-top: 20px;
+}
 
-  .navbar .dwgames{
-    display: inline-block;
-    margin-left: 50px;
-    margin-top: 45px;
-  }
+.navbar ul{
+  float:right;
+  margin-right: 20px;
   
-
-  .navbar .dwgames a{
-    text-decoration: none;
-    font-size: 40px;
-    font-family: sans-serif;
-    color: white;
-  }
-
-
-  .navbar ul {
-      float: right;
-      margin-right: 20px;
-  }
-
-  .navbar ul li {
-      list-style: none;
-      display: inline-block;
-      margin: 0 8px;
-      line-height: 80px;
-  }
-
-  .navbar ul li a {
-      color: white;
-      text-decoration: none;
-      font-size: 20px;
-      padding: 6px 13px;
-      transition: .5s;
-  }
-  .navbar ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 6px 13px;
-    transition: .5s;
-}
-  .navbar ul li a.active,
-  .navbar ul li a:hover{
-    background-color: orange;
-    border-radius: 2px;
-  }
-
-  .container .center{
-    position: absolute;
-    top: 45%;
-    left: 40%;
-    transform: (-50%,-50%);
-    font-family: sans-serif;
-    color: white;
-    user-select: none;
-  }
-
-  .center h1{
-    color: rgb(39, 165, 60);
-    font-size: 70px;
-    font-weight: bold;
-    width: 800px;
-    text-align:left;
-  }
-
-  .cente2 h2{
-   color: rgb(133, 175, 33);
-   font-size: 45px;
-   font-weight: bold;
-   width: 885px;
-   margin-top: 10px;
-   text-align: right;
-   outline: none; 
 }
 
+.navbar .ucretsizhesap a{
+  text-decoration: none;
+  font-size: 30px;
+  font-family: sans-serif;
+  color: rgb(0, 0, 0);
+}
+
+.navbar ul li{
+  list-style: none;
+  display: inline-block;
+  margin: 0 8px;
+  line-height: 40px;
+}
+
+.navbar ul li a{
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 6px 13px;
+  font-family: Roboto;
+  transition: 0.5s;
+}
+
+.navbar ul li a.active,
+.navbar ul li a:hover{
+  background-color: rgb(206, 1, 1);
+  border-radius: 100px;
+}
+
+.container .center {
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  transform: translate(-50%-50%);
+  font-family: sans-serif;
+  user-select: none;
+}
+
+.center h1{
+  color: rgb(0, 0, 0);
+  font-size: 70px;
+  font-weight: bold;
+  width: 900px;
+  text-align: center;
+}
+
+.center h3{
+  backface-visibility: 10% 10;
+  color: rgb(66, 11, 11);
+  font-size: 23px;
+  font-weight: bold;
+  width: 900px;
+  text-align: center;
+}
