--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 .container {
-  background: url(dfa.jpg);
+  background: url(wp.webp);
    height: 100vh;
    background-size: 101% 100%;
    background-repeat: repeat;
