--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   text-decoration: none;
   font-size: 30px;
   font-family: sans-serif;
-  color: rgb(0, 0, 0);
+  color: aqua;
 }
 
 .navbar ul li{
@@ -43,7 +43,7 @@
 }
 
 .navbar ul li a{
-  color: white;
+  color: aqua;
   text-decoration: none;
   font-size: 20px;
   padding: 6px 13px;
