--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 }
 
 .navbar .ucretsizhesap a{
+  background-image: url(dn.jpg);
   text-decoration: none;
   font-size: 30px;
   font-family: sans-serif;
