--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }
 
 .navbar .ucretsizhesap{
+  background-color: rgb(64, 192, 64);
   display: inline-block;
   margin-left: 50px;
   margin-top: 20px;
