--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .navbar .ucretsizhesap{
-  background-color: rgb(64, 192, 64);
+  background-color: black);
   display: inline-block;
   margin-left: 50px;
   margin-top: 20px;
