--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 .navbar .ucretsizhesap{
   background-color: black;
+  border-radius: 50px
   display: inline-block;
   margin-left: 50px;
   margin-top: 20px;
