--- a/style.css
+++ b/style.css
@@ -74,6 +74,32 @@
   width: 900px;
   text-align: center;
 }
+@keyframes glow{
+  100%{
+    text-shadow: 
+    0 0 4px wheat,
+    0 0 11px wheat,
+    0 0 19px wheat,
+    0 0 40px rgb(88, 178, 252),
+    0 0 80px rgb(88, 178, 252),
+    0 0 90px rgb(88, 178, 252),
+    0 0 100px rgb(88, 178, 252),
+    0 0 150px rgb(88, 178, 252);
+  }
+
+  0%{
+    text-shadow: 
+    0 0 4px wheat,
+    0 0 10px wheat,
+    0 0 18px wheat,
+    0 0 38px rgb(88, 178, 252),
+    0 0 73px rgb(88, 178, 252),
+    0 0 80px rgb(88, 178, 252),
+    0 0 94px rgb(88, 178, 252),
+    0 0 140px rgb(88, 178, 252);
+  }
+}
+
 
 .center h3{
   backface-visibility: 10% 10;
