--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ margin-right: 2rem;
 
 .navbar ul li a.active,
 .navbar ul li a:hover{
-  background-color: rgb(206, 1, 1);
+  background-color: aqua;
   border-radius: 100px;
 }
 
@@ -125,7 +125,7 @@ margin-right: 2rem;
   .center a{
     background-color: black;
     text-decoration: none;
-    color: aqua;
+    color: rgb(255, 255, 255);
     border-radius: 30px;
   }
   
