--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ margin-right: 2rem;
 }
 
 .navbar ul li a{
-  color: aqua;
+  color: white;
   text-decoration: none;
   font-size: 20px;
   padding: 6px 13px;
