--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ color: white;
 float: right;
 line-height: none;
 margin-right: 2rem;
-border-radius: 100px;
+line-height: 80px;
 }
 
 .navbar .ucretsizhesap{
