--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
   padding: 0;
 }
 
+body{
+  background-color: black;
+}
+
 .container {
-  background: url(wp.webp);
   height: 100vh;
   background-size: 101% 100%;
   background-repeat: repeat;
@@ -14,7 +17,7 @@
 .container .navbar{
   width: 100%; 
   height: 85px;
-  background: rgb(133, 124, 101);
+  background: rgb(54, 53, 53);
   justify-content: space-around;
   box-shadow: 0 8px 8px 0 black;
   border-radius: 100px;
@@ -49,7 +52,7 @@ line-height: 80px;
   text-decoration: none;
   font-size: 30px;
   font-family: sans-serif;
-  color: aqua;
+  color: rgb(255, 255, 255);
   border-radius: 100px;
 }
 
@@ -71,7 +74,7 @@ line-height: 80px;
 
 .navbar ul li a.active,
 .navbar ul li a:hover{
-  background-color: aqua;
+  background-color: rgb(255, 0, 0);
   border-radius: 100px;
 }
 
@@ -92,7 +95,7 @@ line-height: 80px;
 }
 .ol li b{
   text-decoration: none;
-  color: rgb(3, 177, 3);
+  color: rgb(255, 7, 7);
   background-color: black;
   border-radius: 100px;
 }
@@ -116,7 +119,7 @@ line-height: 80px;
 .ol3 li b{
   font-size:20px;
   text-decoration: none;
-  color: rgb(3, 177, 3);
+  color: rgb(255, 7, 7);
   background-color: black;
   border-radius: 100px;
 }
@@ -173,7 +176,7 @@ line-height: 80px;
   
   .center h3{
     backface-visibility: 10% 10;
-    color: rgb(45, 146, 20);
+    color: rgb(255, 7, 7);
     font-size: 22px;
     font-weight: bold;
     width: 90px;
