--- a/style.css
+++ b/style.css
@@ -128,6 +128,15 @@ line-height: 80px;
 
   @media (max-width:1050px){
 
+    .container .navbar{
+      width: 100%; 
+      height: 85px;
+      background: rgb(54, 53, 53);
+      justify-content: space-around;
+      box-shadow: 0 8px 8px 0 black;
+      border-radius: 100px;
+    }
+
     .navbar .menuBtn{
       display: initial;
     }
