--- a/style.css
+++ b/style.css
@@ -39,6 +39,39 @@ body{
   
 }
 
+
+/** duyuru**/
+.kutu2 {
+  width: 300px;
+  height: 85px;
+  background-color: #303030;
+  border: 1px solid #3d3d3d;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-left: 50px;
+  margin-top: -650px;
+}
+
+.kutu2 .baslik {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: rgb(255, 6, 6);
+}
+
+.kutu2 .icerik {
+  font-size: 14px;
+}
+
+.kutu2 .ol{
+  color: white;
+}
+
+
+
 .container .navbar{
   width: 100%; 
   height: 85px;
@@ -248,4 +281,34 @@ line-height: 80px;
     .kutu .icerik {
       font-size: 14px;
    }
+
+   /** duyuru **/
+   .kutu2 {
+    width: 300px;
+    height: 85px;
+    background-color: #303030;
+    border: 1px solid #3d3d3d;
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-left: 50px;
+    margin-top: -550px;
+  }
+  
+  .kutu2 .baslik {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: rgb(255, 6, 6);
+  }
+  
+  .kutu2 .icerik {
+    font-size: 14px;
+  }
+  
+  .kutu2 .ol{
+    color: white;
+  }
   }
