--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ line-height: 80px;
       padding: 20px;
       margin-bottom: 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-left: 40px;
+      margin-left: 2rem;
       margin-top: 190px;
     }
     
