--- a/style.css
+++ b/style.css
@@ -70,6 +70,36 @@ body{
   color: white;
 }
 
+/** duyuru2 **/
+
+.kutu3 {
+  width: 300px;
+  height: 85px;
+  background-color: #303030;
+  border: 1px solid #3d3d3d;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-left: 50px;
+  margin-top: -60px;
+}
+
+.kutu3 .baslik {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: rgb(255, 6, 6);
+}
+
+.kutu3 .icerik {
+  font-size: 14px;
+}
+
+.kutu3 .ol{
+  color: white;
+}
 
 
 .container .navbar{
