--- a/style.css
+++ b/style.css
@@ -145,19 +145,19 @@ line-height: 80px;
   left: 16%;
 }
 
-.ol li a{
+.ol  a{
   text-decoration: none;
   color: rgb(255, 255, 255);
   background-color: black;
   border-radius: 100px;
 }
-.ol li b{
+.ol b{
   text-decoration: none;
   color: rgb(255, 7, 7);
   background-color: black;
   border-radius: 100px;
 }
- .ol li i{
+ .ol  i{
   color: white;
  }
  .ol3 {
