--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ line-height: 80px;
       padding: 20px;
       margin-bottom: 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-left: 1.5rem;
+      margin-left: 10px;
       margin-top: 0px;
     }
     
