--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ line-height: 80px;
 
 .navbar ul li a.active,
 .navbar ul li a:hover{
-  background-color: rgb(255, 0, 0);
+  background-color: black;
   border-radius: 100px;
 }
 
