--- a/style.css
+++ b/style.css
@@ -77,14 +77,14 @@ body{
 
 
 
-.container .navbar{
-  width: 100%; 
-  height: 85px;
-  background: rgb(54, 53, 53);
-  justify-content: space-around;
-  box-shadow: 0 8px 8px 0 black;
-  border-radius: 100px;
-}
+  .container .navbar{
+    width: 100%; 
+    height: 85px;
+    background: rgb(54, 53, 53);
+    justify-content: space-around;
+    box-shadow: 0 8px 8px 0 black;
+    border-radius: 100px;
+  }
 
 .navbar #menuBtn{
 display: none;
@@ -99,10 +99,19 @@ margin-right: 2.5rem;
 line-height: 80px;
 }
 
+.navbar .ucretsizhesap a{
+  text-decoration: none;
+  font-size: 25px;
+  font-family: sans-serif;
+  color: rgb(255, 255, 255);
+  border-radius: 100px;
+}
+
+
 .navbar .ucretsizhesap{
-  display: inline-block;
-  margin-left: 50px;
-  margin-top: 20px;
+display: inline-block;
+margin-left: 36px;
+margin-top: 20px;
 }
 
 .navbar ul{
