--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ line-height: 80px;
 
 .navbar .ucretsizhesap a{
   text-decoration: none;
-  font-size: 25px;
+  font-size: 23px;
   font-family: sans-serif;
   color: rgb(255, 255, 255);
   border-radius: 100px;
@@ -110,7 +110,7 @@ line-height: 80px;
 .navbar .ucretsizhesap{
   display: inline-block;
   margin-left: 36px;
-  margin-top: 25px;
+  margin-top: 23x;
 }
 .navbar ul{
   float:right;
