--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ line-height: 80px;
 .navbar .ucretsizhesap{
   display: inline-block;
   margin-left: 36px;
-  margin-top: 20x;
+  margin-top: 30px;
 }
 .navbar ul{
   float:right;
