--- a/style.css
+++ b/style.css
@@ -109,9 +109,11 @@ line-height: 80px;
 
 .navbar .ucretsizhesap{
   display: inline-block;
-  margin-left: 36px;
-  margin-top: 30px;
+  margin-left: 50px;
+  margin-top: 20px;
+  font-family: 'Bebas Neue', sans-serif;
 }
+
 .navbar ul{
   float:right;
   margin-right: 20px; 
