--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ line-height: 80px;
       height: 85px;
       background: rgb(54, 53, 53);
       justify-content: space-around;
-      box-shadow: 0 8px 8px 0 black;
+      box-shadow: 0 1px 16px 0 white;
       border-radius: 100px;
     }
 
