--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-left: 400px;
   margin-top: 40px;
+  box-shadow: 0 1px 12px 0 white;
 }
 
 .kutu .baslik {
