--- a/style.css
+++ b/style.css
@@ -309,18 +309,19 @@ line-height: 80px;
       content: "\f00d";
       border-radius: 100px;
     }
-
+    
     .kutu {
       width: 350px;
       height: 300px;
       background-color: #303030;
       border: 1px solid #3d3d3d;
       border-radius: 10px;
-      padding: 20px;
+      padding: 5px;
       margin-bottom: 20px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-left: 0.9px;
-      margin-top: 2px;
+      box-shadow: 10 10px 5px white;
+      margin-left: 1px;
+      margin-top: 25px;
+      box-shadow: 0 1px 12px 0 white;
     }
     
     .kutu .baslik {
