--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ line-height: 80px;
       padding: 5px;
       margin-bottom: 20px;
       box-shadow: 10 10px 5px white;
-      margin-left: 0.5px;
+      margin-left: 1rem;
       margin-top: 25px;
       box-shadow: 0 1px 12px 0 white;
     }
