--- a/style.css
+++ b/style.css
@@ -72,7 +72,36 @@ body{
   font-size: 14px;
 }
 
-.kutu2 .ol{
+.kutuv2 .ol{
+  color: white;
+}
+
+.kutuv2 {
+  width: 300px;
+  height: 80px;
+  background-color: #303030;
+  border: 1px solid #3d3d3d;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-left: 500px;
+  margin-top: 50px;
+}
+
+.kutuv2 .baslik {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: rgb(255, 6, 6);
+}
+
+.kutuv2 .icerik {
+  font-size: 14px;
+}
+
+.kutuv2 .ol{
   color: white;
 }
 
