--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
   font-size: 14px;
 }
 
-.kutuv2 .ol{
+.kutu2 .ol{
   color: white;
 }
 
@@ -85,7 +85,7 @@ body{
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin-left: 500px;
+  margin-left: 50px;
   margin-top: 50px;
 }
 
