--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-left: 400px;
   margin-top: 40px;
-  box-shadow: 0 1px 12px 0 white;
+  box-shadow:2px 2px 3px 0px rgb(255, 255, 255),-2px -2px 3px 0 rgb(10, 235, 197) ;
 }
 
 .kutu .baslik {
