--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body{
   font-weight: bold;
   margin-bottom: 10px;
   color: rgb(255, 6, 6);
+  text-shadow: 1px 1px 3px rgb(0, 0, 0),0 1px rgb(0, 0, 0), 2px 2px 2px rgb(0, 0, 0);
 }
 
 .kutuv2 .icerik {
@@ -108,7 +109,8 @@ body{
 }
 
 .kutuv2 .ol a{
-  color: white;
+  color: rgb(39, 255, 237);
+  text-shadow: 1px 1px 3px rgb(0, 0, 0),0 1px rgb(0, 0, 0), 2px 2px 2px rgb(0, 0, 0);
 }
 
 
