--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body{
   font-weight: bold;
   margin-bottom: 10px;
   color: rgb(255, 6, 6);
+  text-shadow: 1px 1px 3px rgb(0, 0, 0),0 1px rgb(0, 0, 0), 2px 2px 2px rgb(0, 0, 0);
 }
 
 .kutu2 .icerik {
