--- a/style.css
+++ b/style.css
@@ -660,34 +660,41 @@ table tr td{
 
 
 table tr td c{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
+  font-size: 20px;
   height: 2vh;
   margin-left: 40%;
   color: rgb(0, 0, 0);
-  text-shadow: 1px 1px 3px rgb(36, 247, 219),0 1px rgb(95, 89, 89), 2px 2px 2px rgb(199, 199, 199);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.719),0 1px rgb(255, 255, 255), 2px 2px 2px rgb(255, 255, 255);
 }
 
 
 
 
 table tr td d{
-  margin-left: 33%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-left: 39%;
   color: rgb(0, 0, 0);
 }
 
 table tr td a{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-left: 38%;
   color: rgb(0, 0, 0);
   background-color: aqua;
+  border-radius: 20px;
 }
 
 table tr td l{
-  margin-left: 38%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 46%;
   color: rgb(0, 0, 0);
 }
 
 
 
 table .sd{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: white;
 }
 
@@ -1260,8 +1267,8 @@ line-height: 80px;
     }
     .navbar #menuBtn:checked ~ label.menuBtn i::before{
       content: "\f00d";
-      border-radius: 100px;
       box-shadow: 0 20px 50px white;
+      border-radius: 0px;
     }
 
 
@@ -2210,10 +2217,12 @@ table tr td{
 
 
 table tr td c{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
+  font-size: 20px;
   height: 2vh;
   margin-left: 40%;
   color: rgb(0, 0, 0);
-  text-shadow: 1px 1px 3px rgb(36, 247, 219),0 1px rgb(95, 89, 89), 2px 2px 2px rgb(199, 199, 199);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.719),0 1px rgb(255, 255, 255), 2px 2px 2px rgb(255, 255, 255);
 }
 
 
